Las tablas ya muestran imágenes